Mon Nov 27 18:08:35 GMT 2000 Olly Betts

	* A RefCntPtr now copes with being assigned to (used to delete the
	  underlying object if the reference count was 1).  Added regression
	  test (refcnt2).

	* Now overwrite pointer inside RefCntPtr before deleting the pointed
	  to object so there's no window where another thread can access the
	  pointer and get the just-deleted object.

Mon Nov 27 14:36:59 GMT 2000 Olly Betts

	* OmError class now optionally stores an errno value.

Mon Nov 27 13:04:18 GMT 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Quartztest builds its test databases in a subdirectory, which
	  is now in .cvsignore, so we shouldn't get cvs complaining about
	  so many unknown files any more.

Mon Nov 27 12:53:16 GMT 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Another TODO item.

Mon Nov 27 12:15:53 GMT 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Added a couple of new items to the todo list.

Fri Nov 24 19:23:56 GMT 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Quartztests now deletes all old tables, so that database formats
	  don't cause problems.

Fri Nov 24 19:03:59 GMT 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Added std:: prefix to lots of strings which didn't have it.
	  I've probably added some where they shouldn't be: there were rather
	  a lot of cases of this.

Fri Nov 24 18:27:06 GMT 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Major bug fix!  When removing elements, matcher was performing
	  nth_element() on the first element to be thrown away, rather than
	  the lowest element to keep.  This meant that, after throwing away
	  low scoring items, items.back() was a random item rather than the
	  lowest scoring item.  This caused the min weight for getting into
	  the mset to go up faster than it should have done, and generally
	  broke everything.

	  It will be interesting to compare evaluation measures before and
	  after this fix.
